@@ -7,3 +7,4 @@ thmsg: A new program for extracting and recreating message files.
 thtk: Text strings are no longer converted from their original character set.
 thecl: The output format has been changed in ways that are not compatible with
        thtk 2.
+thecl: Support for TH95 has been added.
